--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "prometheus-client>=0.21.1",
+    "prometheus-fastapi-instrumentator>=7.1.0",
     "python-dotenv>=1.1.0",
 ]
 
