--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ REDIS_PORT=6379
 
 # === Alert ===
 ALERT_SUPPRESS_TIME=60
+
+# === Grafana ===
+GF_SECURITY_ADMIN_USER=admin
+GF_SECURITY_ADMIN_PASSWORD=admin
