feat: Added pytest configuration & sample test  (#50)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,12 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
     "ruff>=0.11.8",
 ]
+
+[tool.pytest.ini_options]
+addopts = "-ra"
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_functions = "test_*"
