--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "prometheus-client>=0.21.1",
     "prometheus-fastapi-instrumentator>=7.1.0",
     "python-dotenv>=1.1.0",
+    "pytz>=2025.2",
     "redis>=6.0.0",
 ]
 
