chore: Integrated pytest into CI workflow (#54)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,3 +36,8 @@ jobs:
 
       - name: Run linter
         run: uv run ruff check .
+      
+      - name: Run tests
+        run: |
+          cp .env.example .env
+          uv run pytest -v 
