--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,5 @@ jobs:
         run: uv run ruff check .
       
       - name: Run tests
-        run: |
-          cp .env.example .env
-          uv run pytest -v 
+        run: uv run pytest -v 
+        
