--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "pytz>=2025.2",
     "redis>=6.0.0",
+    "requests>=2.32.3",
 ]
 
 [dependency-groups]
