--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dev = [
     "pytest>=8.3.5",
     "pytest-cov>=6.1.1",
     "ruff>=0.11.8",
+    "pytest-asyncio>=0.21.0",
+    "httpx==0.27.2"
 ]
 
 [tool.pytest.ini_options]
@@ -26,3 +28,4 @@ addopts = "-ra"
 testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
+asyncio_mode = "auto"
