--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,5 +38,10 @@ jobs:
         run: uv run ruff check .
       
       - name: Run tests
-        run: uv run pytest -v 
-        
+        run: uv run pytest --cov=app --cov-report=xml --junitxml=junit/test-results.xml
+      
+      - name: SonarQube scan
+        uses: SonarSource/sonarqube-scan-action@v5.1.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
