feat: Added alert websocket ping test (#72)

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ REDIS_PORT=6379
 
 # === Alert ===
 ALERT_SUPPRESS_TIME=60
+WEBSOCKET_PING_INTERVAL=60
 
 # === Grafana ===
 GF_SECURITY_ADMIN_USER=admin
