chore: Unify datasource and allow edit dashboard locally (#90)

--- a/grafana/provisioning/dashboards/dashboards.yaml
+++ b/grafana/provisioning/dashboards/dashboards.yaml
@@ -4,5 +4,8 @@ providers:
     orgId: 1
     folder: ''
     type: file
+    allowUiUpdates: true
+    editable: true
+    updateIntervalSeconds: 10
     options:
       path: /var/lib/grafana/dashboards
